--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -21,12 +22,20 @@ repositories {
 
 ext {
 	set('springCloudVersion', 'Greenwich.SR1')
+//	newrelicVersion='3.5.1'
 }
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
 	compileOnly 'org.projectlombok:lombok'
+//	compile 'com.newrelic.agent.java:newrelic-api:4.9.0'
+// https://mvnrepository.com/artifact/com.newrelic.agent.java/newrelic-api
+//	compile group: 'com.newrelic.agent.java', name: 'newrelic-api', version: '2.14.1'
+// https://mvnrepository.com/artifact/com.newrelic.agent.java/newrelic-api
+//	compile group: 'com.newrelic.agent.java', name: 'newrelic-api', version: '5.0.0'
+//	newrelic "com.newrelic.agent.java:newrelic-agent:${newrelicVersion}"
+	// https://mvnrepository.com/artifact/com.newrelic.agent.java/newrelic-api
+	compile group: 'com.newrelic.agent.java', name: 'newrelic-api', version: '3.26.1'
 
 	annotationProcessor 'org.projectlombok:lombok:1.18.6'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
